--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <h1 class="title">Rachel Wells — Luxury on a Budget Travel Concierge</h1>
       <p class="subtitle">Travel beautifully, spend smartly. I design polished, stress‑free itineraries that blend boutique stays, hidden‑gem dining, and curated experiences — all tailored to your budget, destination, and vibe.</p>
       <div class="cta">
-        <a class="btn btn-primary" href="https://forms.gle/YOUR_FORM_ID" target="_blank" rel="noopener">Start Your Trip — Fill the Questionnaire</a>
+        <a class="btn btn-primary" href="https://forms.gle/C3xWBfMQ17Rj29Kc8" target="_blank" rel="noopener">Start Your Trip — Fill the Questionnaire</a>
         <a class="btn btn-ghost" href="#highlights">View Sample Itinerary Highlights</a>
       </div>
     </header>
@@ -131,7 +131,7 @@
         <div class="step"><strong>Get Your Final Itinerary</strong> — a curated, printable PDF with hotels, dining, experiences, and day‑by‑day flow.</div>
       </div>
       <div class="cta" style="margin-top:16px">
-        <a class="btn btn-primary" href="https://forms.gle/YOUR_FORM_ID" target="_blank" rel="noopener">Fill Out the Questionnaire</a>
+        <a class="btn btn-primary" href="https://forms.gle/C3xWBfMQ17Rj29Kc8" target="_blank" rel="noopener">Fill Out the Questionnaire</a>
       </div>
     </section>
 
@@ -174,8 +174,8 @@
     <section class="card">
       <h2>Ready to Plan?</h2>
       <p class="lead">Tell me about your trip and I’ll start curating within 24 hours.</p>
-      <a class="btn btn-primary" href="https://forms.gle/YOUR_FORM_ID" target="_blank" rel="noopener">Open the Trip Planning Form</a>
-      <p class="note">Replace <em>YOUR_FORM_ID</em> with your actual Google Form link.</p>
+      <a class="btn btn-primary" href="https://forms.gle/C3xWBfMQ17Rj29Kc8" target="_blank" rel="noopener">Open the Trip Planning Form</a>
+      
     </section>
   </div>
 </body>
